@@ -18,6 +18,7 @@ import com.powsybl.commons.json.JsonUtil;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.crac_io_json.JsonSerializationConstants.*;
 
@@ -54,8 +55,8 @@ public class AngleCnecSerializer<I extends AngleCnec> extends AbstractJsonSerial
         gen.writeArrayFieldStart(THRESHOLDS);
         List<Threshold> sortedListOfThresholds = angleCnec.getThresholds().stream()
             .sorted(new ThresholdComparator())
-            .toList();
-        for (Threshold threshold : sortedListOfThresholds) {
+            .collect(Collectors.toList());
+        for (Threshold threshold: sortedListOfThresholds) {
             gen.writeObject(threshold);
         }
         gen.writeEndArray();
